fix sidebar issues on mobile devices

--- a/css/components/ui/_ranking.scss
+++ b/css/components/ui/_ranking.scss
@@ -1,4 +1,5 @@
 .c-ranking {
+  overflow-x: auto;
   margin: $space-1 * 4;
 
   table {
