--- a/css/components/ui/_sidebar.scss
+++ b/css/components/ui/_sidebar.scss
@@ -49,6 +49,7 @@ $sidebar-width: 700px;
 
   &.-open {
     width: $sidebar-width;
+    max-width: 100vw;
     transform: translate(0, 0);
 
     .sidebar--button {
